--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,72 @@
+# =======================
 # Dependencies
+# =======================
 node_modules/
+**/node_modules/
 .pnp
 .pnp.js
 
-# Testing
-coverage/
-
-# Next.js
+# =======================
+# Next.js build output
+# =======================
 .next/
+**/.next/
 out/
 build/
 dist/
 
-# Production
+# =======================
+# Logs
+# =======================
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
+# =======================
 # Environment variables
+# (keep .env.example files tracked)
+# =======================
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*
+!.env.example
+!**/.env.example
 
-# Vercel
-.vercel
+# =======================
+# Testing
+# =======================
+coverage/
 
+# =======================
 # TypeScript
+# =======================
 *.tsbuildinfo
 next-env.d.ts
 
-# Prisma
+# =======================
+# Prisma (SQLite)
+# =======================
 *.db
 *.db-journal
-prisma/migrations/
+**/prisma/migrations/
 
-# OS
+# =======================
+# OS junk
+# =======================
 .DS_Store
 Thumbs.db
 
-# IDE
+# =======================
+# IDE / Editor
+# =======================
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
 
-# Misc
+# =======================
+# Misc build / tooling
+# =======================
 .turbo
